--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,41 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
     <title>Spotify</title>
   </head>
   <body>
-    Premium Discover Help Download
-
-    Music for everyone.
-    Spotify is now free on mobile, tablet and computer.
-    Listen to the right music, wherever you are.
-
-    What’s on Spotify?
-
-    Millions of Songs
-    There are millions of
-    songs on Spotify
-
-    HD Music
-    Listen to music as if you
-    were listening live
-
-    Stream Everywhere
-    Stream music on your
-    smartphone, tablet or
-    computer
-
-    It’s as yeezy as Kanye West.
-    Search
-    Know what you want to listen to?
-    Just search and hit play.
-    Browse
-    Check out the latest charts,
-    brand new releases and great
-    playlists for right now.
-    Discover
-    Enjoy new music every Monday
-    with your own personal playlist.
-    Or sit back and enjoy Radio.
+    <div id="main_image">
+      <div id="header">
+        <nav class="nav">
+          <ul>
+            <li>Premium</li>
+            <li>Discover</li>
+            <li>Help</li>
+            <li>Download</li>
+          </ul>
+        </nav>
+        <img id="logo" src="images/spotify-logo.png" alt="spotify-logo">
+      </div>
+      <div id="big_image">
+        <img id="landing" src="images/landing.jpg" alt="people-dancing">
+        <h1>Music for everyone.</h1>
+        <h2>Spotify is now free on mobile, tablet and computer.
+            Listen to the right music, wherever you are.</h2>
+      </div>
+    </div>  
+    <section id="center_content">
+      <h3>What's on Spotify?</h3>
+      <div id="icons_box">
+        <div id="songs">
+          <img src="images/music-icon.png" alt="music-icon">
+          <h4>Millions of Songs</h4>
+          <p>There are millions of
+            songs on Spotify</p>
+        </div>
+        <div id="hd">
+          <img src="images/high-quality-icon.png" alt="HD-icon">
+          <h4>HD Music</h4>
+          <p>Listen to music as if you
+            were listening live</p>
+        </div>
+        <div id="stream">
+          <img src="images/devices-icon.png" alt="devices-icon">
+          <h4>Stream Everywhere</h4>
+          <p>Stream music on your
+            smartphone, tablet or
+            computer</p>
+        </div>
+      </div>
+      </section>
+      <section id="green_box">
+        <h3>It’s as yeezy as Kanye West.</h3>
+        <div id="last_container">
+          <ul>
+            <li>
+              <h4>Search</h4>
+              <p>Know what you want to listen to?
+                Just search and hit play.</p>
+            </li>
+            <li>
+              <h4>Browse</h4>
+              <p>Check out the latest charts,
+                brand new releases and great
+                playlists for right now.</p>
+            </li>
+            <li>
+              <h4>Discover</h4>
+              <p>Enjoy new music every Monday
+                with your own personal playlist.
+                Or sit back and enjoy Radio.</p>
+            </li>
+          </ul>
+          <div id="logo_spotify_container">
+            <img id="white_icon" src="images/spotify-icon-white.png" alt="spotify-icon">
+          </div>
+          <div id="app_container">
+            <img id="app_pic" src="images/spotify-app.jpg" alt="spotify-app">
+          </div>
+        </div>
+      </section>
+    
   </body>
 </html>
